TS-4717: Http2 stack explosion.

(cherry picked from commit 8a7c8fce6a70467e097289ad8e654118b2122293)